--- a/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -9,6 +9,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="Photino.Native" Version="3.1.5" />
     <PackageReference Include="Photino.NET" Version="3.1.14" />
     <PackageReference Include="Photino.Blazor" Version="3.1.8" />
 
