--- a/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
+++ b/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
@@ -27,6 +27,7 @@
 
 
   <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.80" />
 
   </ItemGroup>
