--- a/src/plugin/ThingsGateway.Plugin.VariableExpression/ThingsGateway.Plugin.VariableExpression.csproj
+++ b/src/plugin/ThingsGateway.Plugin.VariableExpression/ThingsGateway.Plugin.VariableExpression.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+<Project Sdk="Microsoft.NET.Sdk">
 	<Import Project="$(SolutionDir)Plugin.props" />
   <Import Project="$(SolutionDir)Version.props" />
 
