--- a/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
+++ b/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
@@ -9,14 +9,8 @@
     <ApplicationIcon>favicon.ico</ApplicationIcon>
     <TargetFrameworks>net8.0-windows;</TargetFrameworks>
 
-    <!--动态适用GC-->
-    <GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode>
-    <!--使用自托管线程池-->
-    <!--<UseWindowsThreadPool>false</UseWindowsThreadPool> -->
-
     <!--使用工作站GC-->
     <ServerGarbageCollection>false</ServerGarbageCollection>
-
     <!--<PlatformTarget>x86</PlatformTarget>-->
   </PropertyGroup>
 
@@ -29,6 +23,7 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.80" />
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.8" />
 
   </ItemGroup>
 
@@ -42,71 +37,54 @@
   </ItemGroup>
 
   <ItemGroup Condition="'$(SolutionName)' != 'ThingsGateway - Admin'">
-
     <ProjectReference Include="$(SolutionDir)\ThingsGateway.Gateway.Razor\ThingsGateway.Gateway.Razor.csproj" />
     <ProjectReference Include="$(SolutionDir)\ThingsGateway.Gateway.NetCore\ThingsGateway.Gateway.NetCore.csproj" />
   </ItemGroup>
 
 
+
+
   <ItemGroup>
     <Content Include="..\ThingsGateway.Server\Index\AdminIndex.razor" Link="Index\AdminIndex.razor" />
     <Content Include="..\ThingsGateway.Server\Index\GatewayIndex.razor" Link="Index\GatewayIndex.razor" />
+    <Compile Include="..\ThingsGateway.Photino\Startup.cs" Link="Startup.cs" />
     <Compile Include="..\ThingsGateway.Server\Index\AdminIndex.razor.cs" Link="Index\AdminIndex.razor.cs" />
     <Compile Include="..\ThingsGateway.Server\Index\GatewayIndex.razor.cs" Link="Index\GatewayIndex.razor.cs" />
+    <Content Include="..\ThingsGateway.Photino\Routes.razor" Link="Routes.razor" />
+    <None Include="..\ThingsGateway.Server\Index\AdminIndex.razor.css" Link="Index\AdminIndex.razor.css" />
+    <None Include="..\ThingsGateway.Server\Index\GatewayIndex.razor.css" Link="Index\GatewayIndex.razor.css" />
     <Content Include="..\ThingsGateway.Server\MainLayout.razor" Link="MainLayout.razor" />
     <Compile Include="..\ThingsGateway.Server\MainLayout.razor.cs" Link="MainLayout.razor.cs" />
     <Content Include="..\ThingsGateway.Server\MainLayout.razor.css" Link="MainLayout.razor.css" />
     <Content Include="..\ThingsGateway.Server\Index\GatewayIndexComponent.razor" Link="Index\GatewayIndexComponent.razor" />
-
     <Compile Include="..\ThingsGateway.Server\Index\GatewayIndexComponent.razor.cs" Link="Index\GatewayIndexComponent.razor.cs" />
-    <None Include="..\ThingsGateway.Server\Index\AdminIndex.razor.css" Link="Index\AdminIndex.razor.css" />
-    <None Include="..\ThingsGateway.Server\Index\GatewayIndex.razor.css" Link="Index\GatewayIndex.razor.css" />
-  </ItemGroup>
 
-  <ItemGroup>
+    <Compile Include="..\ThingsGateway.Server\SingleFilePublish.cs" Link="SingleFilePublish.cs" />
+
+
+
+    <None Include="..\ThingsGateway.Server\Directory.Build.targets" Link="Directory.Build.targets" />
+    <Content Include="..\ThingsGateway.Server\wwwroot\favicon.ico" Link="wwwroot\favicon.ico" />
+    <Content Include="..\ThingsGateway.Server\wwwroot\favicon.png" Link="wwwroot\favicon.png" />
+    <Content Include="..\ThingsGateway.Server\appsettings.Development.json" Link="appsettings.Development.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="..\ThingsGateway.Server\appsettings.json" Link="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+
     <EmbeddedResource Include="..\ThingsGateway.Server\Locales\en-US.json" Link="Locales\en-US.json" />
     <EmbeddedResource Include="..\ThingsGateway.Server\Locales\zh-CN.json" Link="Locales\zh-CN.json" />
     <EmbeddedResource Include="Locales\*.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
-  </ItemGroup>
 
-  <ItemGroup>
     <Content Update="wwwroot\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.8" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Remove="favicon.ico" />
-    <Content Include="favicon.ico">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-
-    <None Update="pm2-windows.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="pm2-linux.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Update="WindowsServiceDelete.bat">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Include="$(SolutionDir)..\README.md" Pack="true" PackagePath="\" />
-    <None Include="$(SolutionDir)..\LICENSE" Pack="true" PackagePath="\" />
-    <None Include="$(SolutionDir)..\icon.png" Pack="true" PackagePath="\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Locales\" />
-  </ItemGroup>
-
 
 </Project>
