--- a/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
+++ b/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
@@ -9,8 +9,10 @@
     <ApplicationIcon>favicon.ico</ApplicationIcon>
     <TargetFrameworks>net8.0-windows;</TargetFrameworks>
 
+    <!--动态适用GC-->
+    <GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode>
     <!--使用工作站GC-->
-    <ServerGarbageCollection>false</ServerGarbageCollection>
+    <!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
     <!--<PlatformTarget>x86</PlatformTarget>-->
   </PropertyGroup>
 
