--- a/src/debugs/ThingsGateway.Debug.Winform/ThingsGateway.Debug.Winform.csproj
+++ b/src/debugs/ThingsGateway.Debug.Winform/ThingsGateway.Debug.Winform.csproj
@@ -15,7 +15,7 @@
     <!--<UseWindowsThreadPool>false</UseWindowsThreadPool> -->
 
     <!--使用工作站GC-->
-    <ServerGarbageCollection>false</ServerGarbageCollection>
+    <!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
 
     <!--<PlatformTarget>x86</PlatformTarget>-->
   </PropertyGroup>
