--- a/src/Version.props
+++ b/src/Version.props
@@ -1,6 +1,6 @@
 <Project>
   <PropertyGroup>
-    <Version>6.0.5.28</Version>
+    <Version>6.0.5.29-beta01</Version>
   </PropertyGroup>
 
   <ItemGroup>
