--- a/src/ThingsGateway.Server/appsettings.json
+++ b/src/ThingsGateway.Server/appsettings.json
@@ -3,6 +3,7 @@
 
   "ConfigurationScanDirectories": [ "" ],
   "IgnoreConfigurationFiles": [ "" ],
+  "ExternalAssemblies": [ "" ],
   "CorsAccessorSettings": {
     "PolicyName": "ThingsGateway",
     "WithExposedHeaders": [ "access-token", "x-access-token", "environment" ],
