--- a/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
+++ b/src/ThingsGateway.Winform/ThingsGateway.Winform.csproj
@@ -24,9 +24,8 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.80" />
-    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.8" />
-
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebView.WindowsForms" Version="8.0.82" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.8" />
   </ItemGroup>
 
   <PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Admin'">
