--- a/src/tools/ThingsGateway.Startup/ThingsGateway.Startup.csproj
+++ b/src/tools/ThingsGateway.Startup/ThingsGateway.Startup.csproj
@@ -5,7 +5,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageReference Include="SqlSugarCore" Version="5.1.4.167" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.2" />
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
     <PackageReference Include="MiniExcel" Version="1.34.1" />
     <PackageReference Include="Mapster" Version="7.4.0" />
@@ -15,5 +15,13 @@
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.8" />
     <ProjectReference Include="..\ThingsGateway.Core\ThingsGateway.Core.csproj" />
   </ItemGroup>
-  
+
+
+  <ItemGroup Condition="'$(TargetFramework)'=='net8.0'">
+    <PackageReference Include="SqlSugarCore" Version="5.1.4.167" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)'=='net6.0'">
+    <PackageReference Include="SqlSugarCore" Version="5.1.4.122" />
+  </ItemGroup>
+
 </Project>
