--- a/src/Plugin.props
+++ b/src/Plugin.props
@@ -1,6 +1,7 @@
 <Project>
   <PropertyGroup>
     <TargetFrameworks>net6.0;net8.0;</TargetFrameworks>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
 
   <ItemGroup>
