--- a/src/plugin/ThingsGateway.Plugin.RabbitMQ/ThingsGateway.Plugin.RabbitMQ.csproj
+++ b/src/plugin/ThingsGateway.Plugin.RabbitMQ/ThingsGateway.Plugin.RabbitMQ.csproj
@@ -2,6 +2,7 @@
 
   <Import Project="$(SolutionDir)Plugin.props" />
   <Import Project="$(SolutionDir)Version.props" />
+  <Import Project="$(SolutionDir)PackNuget.props" />
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
 
