--- a/src/plugin/ThingsGateway.Plugin.DB/ThingsGateway.Plugin.DB.csproj
+++ b/src/plugin/ThingsGateway.Plugin.DB/ThingsGateway.Plugin.DB.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 	<Import Project="$(SolutionDir)Plugin.props" />
   <Import Project="$(SolutionDir)Version.props" />
+  <Import Project="$(SolutionDir)PackNuget.props" />
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
 
 		<Exec Command="@echo off&#xD;&#xA;setlocal enabledelayedexpansion&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;    set &quot;dir=$(SolutionDir)ThingsGateway.Server\bin\$(Configuration)\$(TargetFramework)\Plugins\$(AssemblyName)&quot;&#xD;&#xA;    if not exist &quot;!dir!&quot; md &quot;!dir!&quot;&#xD;&#xA;    copy &quot;$(TargetDir)*DB*.dll&quot; &quot;!dir!&quot;&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;endlocal&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;" Condition="'$(OS)'=='Windows_NT'" />
 	</Target>
-
+  
 </Project>
