--- a/src/ThingsGateway.Server/ThingsGateway.Server.csproj
+++ b/src/ThingsGateway.Server/ThingsGateway.Server.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <Import Project="$(SolutionDir)NugetPackageReference.props" Condition="'$(SolutionName)'!='ThingsGateway - Admin'"/>
+  <Import Project="$(SolutionDir)NugetPackageReference.props"/>
 
   <Import Project="$(SolutionDir)Version.props" />
   <PropertyGroup>
