--- a/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/debugs/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFrameworks>net8.0;net6.0</TargetFrameworks>
 
     <!--动态适用GC-->
     <GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode>
