--- a/src/Plugin.props
+++ b/src/Plugin.props
@@ -1,7 +1,8 @@
 <Project>
   <PropertyGroup>
     <TargetFrameworks>net8.0;net6.0;</TargetFrameworks>
-    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
+    <RunPostBuildEvent>Always</RunPostBuildEvent>
+    <AccelerateBuildsInVisualStudio>false</AccelerateBuildsInVisualStudio>
   </PropertyGroup>
 
   <ItemGroup>
