--- a/src/ThingsGateway.Gateway.Application/ThingsGateway.Gateway.Application.csproj
+++ b/src/ThingsGateway.Gateway.Application/ThingsGateway.Gateway.Application.csproj
@@ -5,9 +5,9 @@
 
   <ItemGroup>
     <PackageReference Include="SqlSugar.TDengineCore" Version="4.18.0" />
-    <PackageReference Include="Rougamo.Fody" Version="4.0.2" />
+    <PackageReference Include="Rougamo.Fody" Version="4.0.3" />
     <PackageReference Include="CS-Script" Version="4.8.17" />
-    <PackageReference Include="TouchSocket.Dmtp" Version="2.1.0-rc.37" />
+    <PackageReference Include="TouchSocket.Dmtp" Version="2.1.0" />
     
   </ItemGroup>
 
