--- a/src/tools/ThingsGateway.Core/ThingsGateway.Core.csproj
+++ b/src/tools/ThingsGateway.Core/ThingsGateway.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$(SolutionDir)Version.props" />
   <Import Project="$(SolutionDir)PackNuget.props" />
 
@@ -8,7 +8,7 @@
     <PackageReference Include="Yitter.IdGenerator" Version="1.0.14" />
     <PackageReference Include="MiniExcel" Version="1.34.2" />
     <PackageReference Include="Mapster" Version="7.4.0" />
-    <PackageReference Include="BootstrapBlazor" Version="8.9.2" />
+    <PackageReference Include="BootstrapBlazor" Version="8.9.3" />
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="8.0.1" />
     <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="8.0.8" />
   </ItemGroup>
