--- a/src/DebugTool/ThingsGateway.Debug.Winform/ThingsGateway.Debug.Winform.csproj
+++ b/src/DebugTool/ThingsGateway.Debug.Winform/ThingsGateway.Debug.Winform.csproj
@@ -24,8 +24,8 @@
 
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="ThingsGateway.Razor" Version="7.0.*" />
-    <PackageReference Include="ThingsGateway.Debug.Razor" Version="9.0.*" />
+    <PackageReference Include="ThingsGateway.Razor" Version="$(AdminVersion)" />
+    <PackageReference Include="ThingsGateway.Debug.Razor" Version="$(PluginVersion)" />
   </ItemGroup>
 
   <ItemGroup>
