--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,4 +1,11 @@
 <Project>
+
+  <PropertyGroup>
+    <AdminVersion>7.0.0.56</AdminVersion>
+    <PluginVersion>9.0.0.5</PluginVersion>
+    <ProPluginVersion>9.0.0.6</ProPluginVersion>
+  </PropertyGroup>
+  
 	<PropertyGroup>
 		<NoWarn>CS8603;CS8618;CS1591;CS8625;CS8602;CS8604;CS8600;CS8601;CS8714;CS8619;CS8629;CS8765;CS8634;CS8621;CS8767;CS8633;CS8620;CS8610;CS8631;CS8605;CS8622;CS8613;NU5100;</NoWarn>
 		<TargetFrameworks>net8.0;net6.0;</TargetFrameworks>
