--- a/src/DebugTool/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
+++ b/src/DebugTool/ThingsGateway.Debug.Photino/ThingsGateway.Debug.Photino.csproj
@@ -5,7 +5,6 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <ApplicationIcon>favicon.ico</ApplicationIcon>
-    <TargetFrameworks>net8.0;net6.0</TargetFrameworks>
 
     <!--动态适用GC-->
     <GarbageCollectionAdaptationMode>true</GarbageCollectionAdaptationMode>
@@ -46,7 +45,9 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="8.0.10" />
   </ItemGroup>
-
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net9.0' ">
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebView" Version="9.0.0-rc.2.24474.3" />
+  </ItemGroup>
 
   <ItemGroup>
     <Compile Include="..\..\ThingsGateway.Photino\Photino\**" LinkBase="Photino">
