--- a/src/ThingsGateway.Server/Configuration/App.json
+++ b/src/ThingsGateway.Server/Configuration/App.json
@@ -11,6 +11,9 @@
     "SupportPackageNamePrefixs": [
       "ThingsGateway.Admin.Application",
       "ThingsGateway.Admin.Razor",
+
+      "ThingsGateway.Foundation.Razor",
+      "ThingsGateway.Debug.Razor",
       "ThingsGateway.Core",
       "ThingsGateway.Razor"
     ]
